Fixed corner bugs

--- a/Networkx.ipynb
+++ b/Networkx.ipynb
@@ -145,6 +145,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "784\n",
+      "2970\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(G.nodes()))\n",
+    "print(len(G.edges()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
