Dropout Graph Attention network

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3490883/2722121427.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_1862761/1728813183.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -97,6 +97,10 @@
     "    import torch_geometric\n",
     "import torch_geometric.nn as geom_nn\n",
     "import torch_geometric.data as geom_data\n",
+    "import torch_geometric.loader as geom_loader\n",
+    "import torch_geometric.utils as geom_utils\n",
+    "# from torch_geometric.nn import GraphUNet\n",
+    "# from torch_geometric.utils import dropout_adj\n",
     "\n",
     "from monai.data import CacheDataset, list_data_collate\n",
     "from monai.config import print_config\n",
@@ -142,29 +146,14 @@
       "\n",
       "  | Name          | Type     | Params\n",
       "-------------------------------------------\n",
-      "0 | model         | GNNModel | 67.6 K\n",
+      "0 | model         | GNNModel | 200 K \n",
       "1 | loss_function | DiceLoss | 0     \n",
       "-------------------------------------------\n",
-      "67.6 K    Trainable params\n",
+      "200 K     Trainable params\n",
       "0         Non-trainable params\n",
-      "67.6 K    Total params\n",
-      "0.270     Total estimated model params size (MB)\n",
+      "200 K     Total params\n",
+      "0.801     Total estimated model params size (MB)\n",
       "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation sanity check:   0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
-      "The dataloader, val_dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n"
      ]
     },
     {
@@ -178,7 +167,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
       "Global seed set to 42\n"
      ]
     },
@@ -186,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 29:   7%|▋         | 55/755 [02:08<27:17,  2.34s/it, loss=0.703, v_num=0, val_loss=0.651] "
+      "Epoch 5:  11%|█         | 83/755 [02:35<20:55,  1.87s/it, loss=0.758, v_num=10, val_loss=0.748] "
      ]
     }
    ],
@@ -269,13 +257,18 @@
     "        \"\"\"\n",
     "        self.reset()\n",
     "        # self.set_array(array, diff_edge=diff_edge)\n",
-    "        self.array = array if array.ndim == 3 else np.expand_dims(array, axis=2)\n",
+    "        self.array = array.astype(np.float32) if array.ndim == 3 else np.expand_dims(array, axis=2)\n",
     "        self.height, self.width = array.shape[:2]\n",
     "    \n",
     "        # Create the graph\n",
     "        self.graph = nx.grid_2d_graph(self.height, self.width)\n",
+    "        \n",
     "        self.set_nodes(weight=None)\n",
     "        self.set_edges(weight=None, diff_edge=diff_edge)\n",
+    "        # for n, node in enumerate(self.graph.nodes):\n",
+    "        #     print(self.graph.nodes[node])\n",
+    "        self.number_of_nodes = self.graph.number_of_nodes()\n",
+    "        self.number_of_edges = self.graph.number_of_edges()\n",
     "\n",
     "    def reset(self):\n",
     "        self.height = 0\n",
@@ -297,18 +290,43 @@
     "                for x in range(self.width-1)\n",
     "                for y in range(self.height-1)\n",
     "            ], weight=0.5)\n",
+    "        elif cc==4: \n",
+    "            # connected component is equal to 4 already in the grid\n",
+    "            pass\n",
     "\n",
-    "        if diff_edge:\n",
+    "        # Add edge to master node \n",
+    "        for p in [(-1, -1), (-2, -2)]:\n",
+    "            self.graph.add_edges_from([\n",
+    "                ((x, y), p)\n",
+    "                for x in range(self.width)\n",
+    "                for y in range(self.height)\n",
+    "            ], weight=0.5)\n",
+    "\n",
+    "        if diff_edge==\"mean\":\n",
+    "            for e, edge in enumerate(self.graph.edges):\n",
+    "                # Compute the mean of the affinity\n",
+    "                self.graph.edges[edge]['weight'] = (self.array[edge[0]] - self.array[edge[1]]) * 0.5\n",
+    "        elif diff_edge==\"diff\":\n",
     "            for e, edge in enumerate(self.graph.edges):\n",
     "                # Compute the affinity, 1 - difference\n",
-    "                self.graph.edges[edge]['weight'] = ( 1 - abs(self.array[edge[0]] - self.array[edge[1]]) )\n",
+    "                self.graph.edges[edge]['weight'] = ( 1 - np.abs(self.array[edge[0]] - self.array[edge[1]]) )\n",
     "\n",
     "    def set_nodes(self, weight=None):\n",
     "        for n, node in enumerate(self.graph.nodes):\n",
     "            y = n // self.width\n",
     "            x = n % self.width\n",
-    "            self.graph.nodes[node]['weight'] = self.array[y,x,:] if weight is None else weight\n",
-    "\n",
+    "            self.graph.nodes[node]['weight'] = self.array[y,x,:] \\\n",
+    "                if weight is None else np.array([weight], dtype=np.float32)\n",
+    "        # Set master node \n",
+    "        self.graph.add_node((-1, -1), weight=np.array([0.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
+    "        self.graph.add_node((-2, -2), weight=np.array([1.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
+    "        # for p in [(-1, -1), (-2, -2)]:\n",
+    "        #     self.graph.add_node(p, weight=np.array([0.0], dtype=np.float32) \\\n",
+    "        #         if weight is None else np.array([weight], dtype=np.float32)) \n",
+    "        # for p in [(-3, -3), (-4, -4)]:\n",
+    "        #     self.graph.add_node(p, weight=np.array([1.0], dtype=np.float32) \\\n",
+    "        #         if weight is None else np.array([weight], dtype=np.float32)) \n",
+    "        # self.graph.nodes[(-1, -1)]['weight'] = 0.5 if weight is None else weight\n",
     "\n",
     "class GraphBasedDataset(Dataset):\n",
     "    def __init__(self, data_dicts, transforms=None):\n",
@@ -322,8 +340,8 @@
     "        image_array = skimage.io.imread(image_file).astype(np.float32) / 255.0\n",
     "        label_array = skimage.io.imread(label_file).astype(np.float32) / 255.0\n",
     "\n",
-    "        image_grid = ImageGrid(image_array[::2, ::2], diff_edge=True)\n",
-    "        label_grid = ImageGrid(label_array[::2, ::2], diff_edge=True)\n",
+    "        image_grid = ImageGrid(image_array[::2, ::2], diff_edge=\"mean\")\n",
+    "        label_grid = ImageGrid(label_array[::2, ::2], diff_edge=\"diff\")\n",
     "\n",
     "        image_graph = torch_geometric.utils.from_networkx(image_grid.graph, \n",
     "                                                          group_node_attrs=['weight'],\n",
@@ -362,7 +380,7 @@
     "\n",
     "    def _shared_dataloader(self, data_dicts, transforms=None, shuffle=True, drop_last=False, num_workers=8):\n",
     "        dataset = GraphBasedDataset(data_dicts, transforms=transforms)\n",
-    "        dataloader = geom_data.DataLoader(\n",
+    "        dataloader = geom_loader.DataLoader(\n",
     "            dataset=dataset, \n",
     "            batch_size=self.batch_size, \n",
     "            num_workers=num_workers, \n",
@@ -377,7 +395,7 @@
     "            transforms=train_transforms, \n",
     "            shuffle=True,\n",
     "            drop_last=False,\n",
-    "            num_workers=4\n",
+    "            num_workers=12\n",
     "        )\n",
     "    \n",
     "    def val_dataloader(self):\n",
@@ -386,7 +404,7 @@
     "            transforms=val_transforms, \n",
     "            shuffle=False,\n",
     "            drop_last=False,\n",
-    "            num_workers=2\n",
+    "            num_workers=4\n",
     "        )\n",
     "\n",
     "    def test_dataloader(self):\n",
@@ -395,7 +413,7 @@
     "            transforms=test_transforms, \n",
     "            shuffle=False,\n",
     "            drop_last=False,\n",
-    "            num_workers=2\n",
+    "            num_workers=4\n",
     "        )\n",
     "\n",
     "gnn_layer_by_name = {\n",
@@ -425,6 +443,7 @@
     "            layers += [\n",
     "                gnn_layer(in_channels=in_channels,\n",
     "                          out_channels=out_channels,\n",
+    "                          dropout=0.5,\n",
     "                          **kwargs),\n",
     "                nn.ReLU(inplace=True),\n",
     "                nn.Dropout(dp_rate)\n",
@@ -458,36 +477,45 @@
     "        self.save_hyperparameters()\n",
     "\n",
     "        self.model = GNNModel(**model_kwargs)\n",
+    "        pool_ratios = [0.25, 0.5]\n",
+    "        # self.gunet = geom_nn.GraphUNet(1, 32, 1, depth=4, pool_ratios=pool_ratios,)\n",
     "        self.loss_function = DiceLoss(to_onehot_y=False, \n",
     "                                      sigmoid=False, \n",
     "                                      squared_pred=False)\n",
     "\n",
-    "    def forward(self, x, edge_index, mode=\"train\"):\n",
-    "        logits = self.model(x, edge_index=edge_index)\n",
-    "        return F.sigmoid(logits)\n",
+    "    def forward(self, data, mode=\"train\"):\n",
+    "        # edge_index, _ = geom_utils.dropout_adj(data.edge_index, p=0.2,\n",
+    "        #                                         force_undirected=True,\n",
+    "        #                                         num_nodes=data.num_nodes,\n",
+    "        #                                         training=self.training)\n",
+    "        # x = F.dropout(data.x, p=0.92, training=self.training)\n",
+    "        # logits1 = self.model(x, edge_index=edge_index)\n",
+    "        # logits2 = self.gunet(x, edge_index=edge_index)\n",
+    "        # return torch.sigmoid(logits1+logits2)\n",
+    "        return torch.sigmoid(self.model(data.x, edge_index=data.edge_index))\n",
     "\n",
     "    def configure_optimizers(self):\n",
-    "        optimizer = torch.optim.Adam(self.parameters(), lr=0.001)\n",
+    "        optimizer = torch.optim.AdamW(self.parameters(), lr=0.0001)\n",
     "        return optimizer\n",
     "\n",
     "    def _shared_step(self, batch, batch_idx, stage: Optional[str]='_shared'):\n",
     "        images, labels = batch[\"image\"], batch[\"label\"]\n",
     "        images_x, images_edge_index = images.x, images.edge_index\n",
     "        # labels_x, labels_edge_index = labels.x, labels.edge_index\n",
-    "        output_x = self.forward(images_x, edge_index=images_edge_index)\n",
-    "        loss = self.loss_function(output_x, labels.x)\n",
+    "        output = self.forward(images)\n",
+    "        loss = self.loss_function(output, labels.x)\n",
     "        return {\"loss\": loss}\n",
     "\n",
     "    def training_step(self, batch, batch_idx, stage: Optional[str]='train'):\n",
     "        images, labels = batch[\"image\"], batch[\"label\"]\n",
-    "        images_x, images_edge_index = images.x, images.edge_index\n",
-    "        labels_x, labels_edge_index = labels.x, labels.edge_index\n",
-    "        output_x = self.forward(images_x, edge_index=images_edge_index)\n",
-    "        loss = self.loss_function(output_x, labels.x)\n",
+    "        # images_x, images_edge_index = images.x, images.edge_index\n",
+    "        # labels_x, labels_edge_index = labels.x, labels.edge_index\n",
+    "        output = self.forward(images)\n",
+    "        loss = self.loss_function(output, labels.x)\n",
     "        if batch_idx==0:\n",
-    "            viz = torch.cat([images_x.reshape([256, 256]), \n",
-    "                             labels_x.reshape([256, 256]), \n",
-    "                             output_x.reshape([256, 256]), \n",
+    "            viz = torch.cat([images.x[:65536].reshape([256, 256]), \n",
+    "                             labels.x[:65536].reshape([256, 256]), \n",
+    "                             output[:65536].reshape([256, 256]), \n",
     "                            ], dim=-1)#[:8]\n",
     "            grid = torchvision.utils.make_grid(viz, nrow=2, padding=0)\n",
     "            tensorboard = self.logger[0].experiment\n",
@@ -530,7 +558,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = NodeLevelGNN(c_in=1, c_hidden=256, c_out=1, num_layers=3, layer_name=\"GAT\")\n",
+    "model = NodeLevelGNN(c_in=1, c_hidden=256, c_out=1, num_layers=5, layer_name=\"GAT\")\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
@@ -551,22 +579,6 @@
     "\n",
     "trainer.fit(model, datamodule)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ! pip install monai[all]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
