Dropout Graph Attention network v2

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1862761/1728813183.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_597530/2221169148.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -98,6 +98,7 @@
     "import torch_geometric.nn as geom_nn\n",
     "import torch_geometric.data as geom_data\n",
     "import torch_geometric.loader as geom_loader\n",
+    "import torch_geometric.transforms as geom_transforms\n",
     "import torch_geometric.utils as geom_utils\n",
     "# from torch_geometric.nn import GraphUNet\n",
     "# from torch_geometric.utils import dropout_adj\n",
@@ -146,13 +147,13 @@
       "\n",
       "  | Name          | Type     | Params\n",
       "-------------------------------------------\n",
-      "0 | model         | GNNModel | 200 K \n",
+      "0 | model         | GNNModel | 51.2 K\n",
       "1 | loss_function | DiceLoss | 0     \n",
       "-------------------------------------------\n",
-      "200 K     Trainable params\n",
+      "51.2 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "200 K     Total params\n",
-      "0.801     Total estimated model params size (MB)\n",
+      "51.2 K    Total params\n",
+      "0.205     Total estimated model params size (MB)\n",
       "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
      ]
     },
@@ -174,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5:  11%|█         | 83/755 [02:35<20:55,  1.87s/it, loss=0.758, v_num=10, val_loss=0.748] "
+      "Epoch 0:   0%|          | 0/755 [00:00<?, ?it/s] "
      ]
     }
    ],
@@ -419,6 +420,7 @@
     "gnn_layer_by_name = {\n",
     "    \"GCN\": geom_nn.GCNConv,\n",
     "    \"GAT\": geom_nn.GATConv,\n",
+    "    \"GATv2\": geom_nn.GATv2Conv,\n",
     "    \"GraphConv\": geom_nn.GraphConv\n",
     "}\n",
     "\n",
@@ -443,7 +445,6 @@
     "            layers += [\n",
     "                gnn_layer(in_channels=in_channels,\n",
     "                          out_channels=out_channels,\n",
-    "                          dropout=0.5,\n",
     "                          **kwargs),\n",
     "                nn.ReLU(inplace=True),\n",
     "                nn.Dropout(dp_rate)\n",
@@ -477,8 +478,6 @@
     "        self.save_hyperparameters()\n",
     "\n",
     "        self.model = GNNModel(**model_kwargs)\n",
-    "        pool_ratios = [0.25, 0.5]\n",
-    "        # self.gunet = geom_nn.GraphUNet(1, 32, 1, depth=4, pool_ratios=pool_ratios,)\n",
     "        self.loss_function = DiceLoss(to_onehot_y=False, \n",
     "                                      sigmoid=False, \n",
     "                                      squared_pred=False)\n",
@@ -558,7 +557,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = NodeLevelGNN(c_in=1, c_hidden=256, c_out=1, num_layers=5, layer_name=\"GAT\")\n",
+    "model = NodeLevelGNN(c_in=1, c_hidden=64, c_out=1, num_layers=8, layer_name=\"GATv2\", heads=1, dropout=0.5)\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
@@ -579,6 +578,13 @@
     "\n",
     "trainer.fit(model, datamodule)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
