Refactor to node level gnn with GAT, possibly add edge level prediction

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_597530/2221169148.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_747626/2221169148.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -147,13 +147,13 @@
       "\n",
       "  | Name          | Type     | Params\n",
       "-------------------------------------------\n",
-      "0 | model         | GNNModel | 51.2 K\n",
+      "0 | model         | GNNModel | 26.1 K\n",
       "1 | loss_function | DiceLoss | 0     \n",
       "-------------------------------------------\n",
-      "51.2 K    Trainable params\n",
+      "26.1 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "51.2 K    Total params\n",
-      "0.205     Total estimated model params size (MB)\n",
+      "26.1 K    Total params\n",
+      "0.104     Total estimated model params size (MB)\n",
       "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
      ]
     },
@@ -175,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0:   0%|          | 0/755 [00:00<?, ?it/s] "
+      "Epoch 0:   9%|▉         | 71/755 [02:09<20:48,  1.83s/it, loss=0.953, v_num=13] "
      ]
     }
    ],
@@ -417,43 +417,53 @@
     "            num_workers=4\n",
     "        )\n",
     "\n",
-    "gnn_layer_by_name = {\n",
-    "    \"GCN\": geom_nn.GCNConv,\n",
-    "    \"GAT\": geom_nn.GATConv,\n",
-    "    \"GATv2\": geom_nn.GATv2Conv,\n",
-    "    \"GraphConv\": geom_nn.GraphConv\n",
-    "}\n",
-    "\n",
     "class GNNModel(nn.Module):\n",
-    "    def __init__(self, c_in, c_hidden, c_out, num_layers=3, layer_name=\"GCN\", dp_rate=0.1, **kwargs):\n",
+    "    def __init__(self, c_in, c_hidden, c_out, num_layers=3, dp_rate=0.1, **kwargs):\n",
     "        \"\"\"\n",
     "        Inputs:\n",
     "            c_in - Dimension of input features\n",
     "            c_hidden - Dimension of hidden features\n",
     "            c_out - Dimension of the output features. Usually number of classes in classification\n",
     "            num_layers - Number of \"hidden\" graph layers\n",
-    "            layer_name - String of the graph layer to use\n",
     "            dp_rate - Dropout rate to apply throughout the network\n",
     "            kwargs - Additional arguments for the graph layer (e.g. number of heads for GAT)\n",
     "        \"\"\"\n",
     "        super().__init__()\n",
-    "        gnn_layer = gnn_layer_by_name[layer_name]\n",
+    "        # gnn_layer = gnn_layer_by_name[layer_name]\n",
+    "        node_layer = geom_nn.GATConv\n",
     "\n",
-    "        layers = []\n",
+    "        node_model = []\n",
     "        in_channels, out_channels = c_in, c_hidden\n",
     "        for l_idx in range(num_layers-1):\n",
-    "            layers += [\n",
-    "                gnn_layer(in_channels=in_channels,\n",
+    "            node_model += [\n",
+    "                node_layer(in_channels=in_channels,\n",
     "                          out_channels=out_channels,\n",
+    "                          dropout=0.5,\n",
     "                          **kwargs),\n",
     "                nn.ReLU(inplace=True),\n",
     "                nn.Dropout(dp_rate)\n",
     "            ]\n",
     "            in_channels = c_hidden\n",
-    "        layers += [gnn_layer(in_channels=in_channels,\n",
+    "        node_model += [node_layer(in_channels=in_channels,\n",
     "                             out_channels=c_out,\n",
     "                             **kwargs)]\n",
-    "        self.layers = nn.ModuleList(layers)\n",
+    "        self.node_model = nn.ModuleList(node_model)\n",
+    "\n",
+    "        # edges = []\n",
+    "        # for l_idx in range(num_layers-1):\n",
+    "        #     nnet = nn.Sequential(nn.Linear(in_channels, out_channels//2))\n",
+    "        #     edges += [\n",
+    "        #         edge_layer(nnet),\n",
+    "        #         nn.ReLU(inplace=True),\n",
+    "        #         nn.Dropout(dp_rate)\n",
+    "        #     ]\n",
+    "        #     in_channels = c_hidden\n",
+    "        # nnet = nn.Sequential(nn.Linear(in_channels//2, c_out))\n",
+    "        # edges += [edge_layer(nnet),]\n",
+    "        # # edges += [edge_layer(in_channels=in_channels,\n",
+    "        # #                      out_channels=c_out,\n",
+    "        # #                      **kwargs)]\n",
+    "        # self.edges = nn.ModuleList(edges)   \n",
     "\n",
     "    def forward(self, x, edge_index):\n",
     "        \"\"\"\n",
@@ -461,17 +471,17 @@
     "            x - Input features per node\n",
     "            edge_index - List of vertex index pairs representing the edges in the graph (PyTorch geometric notation)\n",
     "        \"\"\"\n",
-    "        for l in self.layers:\n",
+    "        for node_layer in self.node_model:\n",
     "            # For graph layers, we need to add the \"edge_index\" tensor as additional input\n",
     "            # All PyTorch Geometric graph layer inherit the class \"MessagePassing\", hence\n",
     "            # we can simply check the class type.\n",
-    "            if isinstance(l, geom_nn.MessagePassing):\n",
-    "                x = l(x, edge_index)\n",
+    "            if isinstance(node_layer, geom_nn.MessagePassing):\n",
+    "                x = node_layer(x, edge_index)\n",
     "            else:\n",
-    "                x = l(x)\n",
+    "                x = node_layer(x)\n",
     "        return x\n",
     "\n",
-    "class NodeLevelGNN(pl.LightningModule):\n",
+    "class GridGNN(pl.LightningModule):\n",
     "    def __init__(self, **model_kwargs):\n",
     "        super().__init__()\n",
     "        # Saving hyperparameters\n",
@@ -483,14 +493,6 @@
     "                                      squared_pred=False)\n",
     "\n",
     "    def forward(self, data, mode=\"train\"):\n",
-    "        # edge_index, _ = geom_utils.dropout_adj(data.edge_index, p=0.2,\n",
-    "        #                                         force_undirected=True,\n",
-    "        #                                         num_nodes=data.num_nodes,\n",
-    "        #                                         training=self.training)\n",
-    "        # x = F.dropout(data.x, p=0.92, training=self.training)\n",
-    "        # logits1 = self.model(x, edge_index=edge_index)\n",
-    "        # logits2 = self.gunet(x, edge_index=edge_index)\n",
-    "        # return torch.sigmoid(logits1+logits2)\n",
     "        return torch.sigmoid(self.model(data.x, edge_index=data.edge_index))\n",
     "\n",
     "    def configure_optimizers(self):\n",
@@ -557,7 +559,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = NodeLevelGNN(c_in=1, c_hidden=64, c_out=1, num_layers=8, layer_name=\"GATv2\", heads=1, dropout=0.5)\n",
+    "model = GridGNN(c_in=1, c_hidden=64, c_out=1, num_layers=8)\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
@@ -578,6 +580,11 @@
     "\n",
     "trainer.fit(model, datamodule)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
