--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_747626/2221169148.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_857944/2221169148.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -147,13 +147,13 @@
       "\n",
       "  | Name          | Type     | Params\n",
       "-------------------------------------------\n",
-      "0 | model         | GNNModel | 26.1 K\n",
+      "0 | model         | GNNModel | 26.9 K\n",
       "1 | loss_function | DiceLoss | 0     \n",
       "-------------------------------------------\n",
-      "26.1 K    Trainable params\n",
+      "26.9 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "26.1 K    Total params\n",
-      "0.104     Total estimated model params size (MB)\n",
+      "26.9 K    Total params\n",
+      "0.108     Total estimated model params size (MB)\n",
       "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
      ]
     },
@@ -161,21 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                                      "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 42\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0:   9%|▉         | 71/755 [02:09<20:48,  1.83s/it, loss=0.953, v_num=13] "
+      "Validation sanity check:   0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -431,10 +417,12 @@
     "        super().__init__()\n",
     "        # gnn_layer = gnn_layer_by_name[layer_name]\n",
     "        node_layer = geom_nn.GATConv\n",
+    "        # node_layer = geom_nn.GATv2Conv\n",
+    "        # node_layer = geom_nn.ResGatedGraphConv\n",
     "\n",
     "        node_model = []\n",
     "        in_channels, out_channels = c_in, c_hidden\n",
-    "        for l_idx in range(num_layers-1):\n",
+    "        for _ in range(num_layers-1):\n",
     "            node_model += [\n",
     "                node_layer(in_channels=in_channels,\n",
     "                          out_channels=out_channels,\n",
@@ -449,23 +437,7 @@
     "                             **kwargs)]\n",
     "        self.node_model = nn.ModuleList(node_model)\n",
     "\n",
-    "        # edges = []\n",
-    "        # for l_idx in range(num_layers-1):\n",
-    "        #     nnet = nn.Sequential(nn.Linear(in_channels, out_channels//2))\n",
-    "        #     edges += [\n",
-    "        #         edge_layer(nnet),\n",
-    "        #         nn.ReLU(inplace=True),\n",
-    "        #         nn.Dropout(dp_rate)\n",
-    "        #     ]\n",
-    "        #     in_channels = c_hidden\n",
-    "        # nnet = nn.Sequential(nn.Linear(in_channels//2, c_out))\n",
-    "        # edges += [edge_layer(nnet),]\n",
-    "        # # edges += [edge_layer(in_channels=in_channels,\n",
-    "        # #                      out_channels=c_out,\n",
-    "        # #                      **kwargs)]\n",
-    "        # self.edges = nn.ModuleList(edges)   \n",
-    "\n",
-    "    def forward(self, x, edge_index):\n",
+    "    def forward(self, x, edge_index, edge_attr=None):\n",
     "        \"\"\"\n",
     "        Inputs:\n",
     "            x - Input features per node\n",
@@ -476,7 +448,7 @@
     "            # All PyTorch Geometric graph layer inherit the class \"MessagePassing\", hence\n",
     "            # we can simply check the class type.\n",
     "            if isinstance(node_layer, geom_nn.MessagePassing):\n",
-    "                x = node_layer(x, edge_index)\n",
+    "                x = node_layer(x, edge_index, edge_attr)\n",
     "            else:\n",
     "                x = node_layer(x)\n",
     "        return x\n",
@@ -493,7 +465,7 @@
     "                                      squared_pred=False)\n",
     "\n",
     "    def forward(self, data, mode=\"train\"):\n",
-    "        return torch.sigmoid(self.model(data.x, edge_index=data.edge_index))\n",
+    "        return torch.sigmoid(self.model(data.x, data.edge_index, data.edge_attr))\n",
     "\n",
     "    def configure_optimizers(self):\n",
     "        optimizer = torch.optim.AdamW(self.parameters(), lr=0.0001)\n",
@@ -559,7 +531,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = GridGNN(c_in=1, c_hidden=64, c_out=1, num_layers=8)\n",
+    "model = GridGNN(c_in=1, c_hidden=64, c_out=1, num_layers=8, edge_dim=1)\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
@@ -576,15 +548,11 @@
     "    logger=[tsb_logger],\n",
     "    callbacks=[checkpoint_callback],\n",
     "    num_sanity_val_steps=1,\n",
+    "    # profiler=\"advanced\",\n",
     ")\n",
     "\n",
     "trainer.fit(model, datamodule)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
