Split node-edge loss

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_857944/2221169148.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_911214/2221169148.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -161,7 +161,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation sanity check:   0%|          | 0/1 [00:00<?, ?it/s]"
+      "                                                                      "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 42\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   2%|▏         | 14/604 [00:57<40:15,  4.09s/it, loss=0.636, v_num=7] "
      ]
     }
    ],
@@ -448,10 +462,10 @@
     "            # All PyTorch Geometric graph layer inherit the class \"MessagePassing\", hence\n",
     "            # we can simply check the class type.\n",
     "            if isinstance(node_layer, geom_nn.MessagePassing):\n",
-    "                x = node_layer(x, edge_index, edge_attr)\n",
+    "                x, (edge_index, alpha) = node_layer(x, edge_index, edge_attr, return_attention_weights=True)\n",
     "            else:\n",
     "                x = node_layer(x)\n",
-    "        return x\n",
+    "        return x, alpha\n",
     "\n",
     "class GridGNN(pl.LightningModule):\n",
     "    def __init__(self, **model_kwargs):\n",
@@ -465,7 +479,10 @@
     "                                      squared_pred=False)\n",
     "\n",
     "    def forward(self, data, mode=\"train\"):\n",
-    "        return torch.sigmoid(self.model(data.x, data.edge_index, data.edge_attr))\n",
+    "        # return torch.sigmoid(self.model(data.x, data.edge_index, data.edge_attr)[0]), \\\n",
+    "        #        torch.sigmoid(self.model(data.x, data.edge_index, data.edge_attr)[1])\n",
+    "        output, alpha = self.model(data.x, data.edge_index, data.edge_attr)\n",
+    "        return torch.sigmoid(output), torch.sigmoid(alpha)\n",
     "\n",
     "    def configure_optimizers(self):\n",
     "        optimizer = torch.optim.AdamW(self.parameters(), lr=0.0001)\n",
@@ -473,22 +490,26 @@
     "\n",
     "    def _shared_step(self, batch, batch_idx, stage: Optional[str]='_shared'):\n",
     "        images, labels = batch[\"image\"], batch[\"label\"]\n",
-    "        images_x, images_edge_index = images.x, images.edge_index\n",
+    "        # images_x, images_edge_index = images.x, images.edge_index\n",
     "        # labels_x, labels_edge_index = labels.x, labels.edge_index\n",
-    "        output = self.forward(images)\n",
-    "        loss = self.loss_function(output, labels.x)\n",
+    "        nodes, edges = self.forward(images)\n",
+    "        # output_cat = torch.cat([nodes.view([-1, 1]), edges.view([-1, 1])])\n",
+    "        # labels_cat = torch.cat([labels.x.view([-1, 1]), labels.edge_attr.view([-1, 1])])\n",
+    "        # loss = self.loss_function(output_cat, labels_cat)\n",
+    "        loss = 0.5*(self.loss_function(nodes, labels.x) + self.loss_function(edges, labels.edge_attr))\n",
     "        return {\"loss\": loss}\n",
     "\n",
     "    def training_step(self, batch, batch_idx, stage: Optional[str]='train'):\n",
     "        images, labels = batch[\"image\"], batch[\"label\"]\n",
-    "        # images_x, images_edge_index = images.x, images.edge_index\n",
-    "        # labels_x, labels_edge_index = labels.x, labels.edge_index\n",
-    "        output = self.forward(images)\n",
-    "        loss = self.loss_function(output, labels.x)\n",
+    "        nodes, edges = self.forward(images)\n",
+    "        # output_cat = torch.cat([nodes.view([-1, 1]), edges.view([-1, 1])])\n",
+    "        # labels_cat = torch.cat([labels.x.view([-1, 1]), labels.edge_attr.view([-1, 1])])\n",
+    "        # loss = self.loss_function(output_cat, labels_cat)\n",
+    "        loss = 0.5*(self.loss_function(nodes, labels.x) + self.loss_function(edges, labels.edge_attr))\n",
     "        if batch_idx==0:\n",
     "            viz = torch.cat([images.x[:65536].reshape([256, 256]), \n",
     "                             labels.x[:65536].reshape([256, 256]), \n",
-    "                             output[:65536].reshape([256, 256]), \n",
+    "                             nodes[:65536].reshape([256, 256]), \n",
     "                            ], dim=-1)#[:8]\n",
     "            grid = torchvision.utils.make_grid(viz, nrow=2, padding=0)\n",
     "            tensorboard = self.logger[0].experiment\n",
@@ -515,7 +536,7 @@
     "\n",
     "log_dir = \"logs\"\n",
     "tsb_logger = TensorBoardLogger(save_dir=os.path.join(log_dir, 'tsb'))\n",
-    "batch_size=4\n",
+    "batch_size=5\n",
     "lr=1e-4\n",
     "max_epochs=201\n",
     "\n",
@@ -531,7 +552,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = GridGNN(c_in=1, c_hidden=64, c_out=1, num_layers=8, edge_dim=1)\n",
+    "model = GridGNN(c_in=1, c_hidden=64, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False)\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
