--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_911214/2221169148.py:23: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_1095567/445973243.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -30,6 +30,7 @@
     "from pathlib import Path\n",
     "from typing import Any, Callable, Dict, List, Optional\n",
     "\n",
+    "import albumentations as AB \n",
     "from PIL import Image\n",
     "import skimage.io\n",
     "import skimage.measure\n",
@@ -138,44 +139,6 @@
       "Found 3000 images and 3000 labels.\n",
       "Found 20 images and 20 labels.\n",
       "Found 20 images and 20 labels.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  | Name          | Type     | Params\n",
-      "-------------------------------------------\n",
-      "0 | model         | GNNModel | 26.9 K\n",
-      "1 | loss_function | DiceLoss | 0     \n",
-      "-------------------------------------------\n",
-      "26.9 K    Trainable params\n",
-      "0         Non-trainable params\n",
-      "26.9 K    Total params\n",
-      "0.108     Total estimated model params size (MB)\n",
-      "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                      "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 42\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0:   2%|▏         | 14/604 [00:57<40:15,  4.09s/it, loss=0.636, v_num=7] "
      ]
     }
    ],
@@ -341,8 +304,16 @@
     "        image_array = skimage.io.imread(image_file).astype(np.float32) / 255.0\n",
     "        label_array = skimage.io.imread(label_file).astype(np.float32) / 255.0\n",
     "\n",
-    "        image_grid = ImageGrid(image_array[::2, ::2], diff_edge=\"mean\")\n",
-    "        label_grid = ImageGrid(label_array[::2, ::2], diff_edge=\"diff\")\n",
+    "        if self.transforms:\n",
+    "            transformed = self.transforms(image=image_array, mask=label_array)\n",
+    "            image = transformed['image']\n",
+    "            label = transformed['mask']\n",
+    "        else:\n",
+    "            image = image_array\n",
+    "            label = label_array\n",
+    "\n",
+    "        image_grid = ImageGrid(image[::2, ::2], diff_edge=\"diff\")\n",
+    "        label_grid = ImageGrid(label[::2, ::2], diff_edge=\"diff\")\n",
     "\n",
     "        image_graph = torch_geometric.utils.from_networkx(image_grid.graph, \n",
     "                                                          group_node_attrs=['weight'],\n",
@@ -391,7 +362,22 @@
     "        return dataloader\n",
     "\n",
     "    def train_dataloader(self):\n",
-    "        train_transforms = None\n",
+    "        train_transforms = AB.Compose([\n",
+    "            AB.OneOf([\n",
+    "                AB.RandomSizedCrop(min_max_height=(320, 640), height=512, width=512, p=0.5),\n",
+    "                AB.PadIfNeeded(min_height=512, min_width=512, p=0.5)\n",
+    "            ], p=1),    \n",
+    "            AB.VerticalFlip(p=0.5),              \n",
+    "            AB.RandomRotate90(p=0.5),\n",
+    "            AB.OneOf([\n",
+    "                AB.ElasticTransform(alpha=120, sigma=120 * 0.05, alpha_affine=120 * 0.03, p=0.5),\n",
+    "                AB.GridDistortion(p=0.5),\n",
+    "                AB.OpticalDistortion(distort_limit=2, shift_limit=0.5, p=1)                  \n",
+    "                ], p=0.8),\n",
+    "            AB.CLAHE(p=0.8),\n",
+    "            AB.RandomBrightnessContrast(p=0.8),    \n",
+    "            AB.RandomGamma(p=0.8)\n",
+    "        ])\n",
     "        return self._shared_dataloader(self.train_data_dicts, \n",
     "            transforms=train_transforms, \n",
     "            shuffle=True,\n",
@@ -418,7 +404,7 @@
     "        )\n",
     "\n",
     "class GNNModel(nn.Module):\n",
-    "    def __init__(self, c_in, c_hidden, c_out, num_layers=3, dp_rate=0.1, **kwargs):\n",
+    "    def __init__(self, c_in, c_hidden, c_out, num_layers=3, dp_rate=0.2, **kwargs):\n",
     "        \"\"\"\n",
     "        Inputs:\n",
     "            c_in - Dimension of input features\n",
@@ -440,7 +426,7 @@
     "            node_model += [\n",
     "                node_layer(in_channels=in_channels,\n",
     "                          out_channels=out_channels,\n",
-    "                          dropout=0.5,\n",
+    "                          dropout=0.2,\n",
     "                          **kwargs),\n",
     "                nn.ReLU(inplace=True),\n",
     "                nn.Dropout(dp_rate)\n",
