More feature maps (100)

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1095567/445973243.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_1167818/445973243.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -139,6 +139,44 @@
       "Found 3000 images and 3000 labels.\n",
       "Found 20 images and 20 labels.\n",
       "Found 20 images and 20 labels.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  | Name          | Type     | Params\n",
+      "-------------------------------------------\n",
+      "0 | model         | GNNModel | 63.7 K\n",
+      "1 | loss_function | DiceLoss | 0     \n",
+      "-------------------------------------------\n",
+      "63.7 K    Trainable params\n",
+      "0         Non-trainable params\n",
+      "63.7 K    Total params\n",
+      "0.255     Total estimated model params size (MB)\n",
+      "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                      "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 42\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1:   0%|          | 0/604 [00:10<?, ?it/s, loss=0.572, v_num=8, val_loss=0.615]          "
      ]
     }
    ],
@@ -301,16 +339,16 @@
     "        image_file = self.data_dicts[index]['image']\n",
     "        label_file = self.data_dicts[index]['label']\n",
     "        \n",
-    "        image_array = skimage.io.imread(image_file).astype(np.float32) / 255.0\n",
-    "        label_array = skimage.io.imread(label_file).astype(np.float32) / 255.0\n",
+    "        image_array = skimage.io.imread(image_file).astype(np.uint8) \n",
+    "        label_array = skimage.io.imread(label_file).astype(np.uint8) \n",
     "\n",
     "        if self.transforms:\n",
     "            transformed = self.transforms(image=image_array, mask=label_array)\n",
-    "            image = transformed['image']\n",
-    "            label = transformed['mask']\n",
+    "            image = transformed['image'].astype(np.float32) / 255.0\n",
+    "            label = transformed['mask'].astype(np.float32) / 255.0\n",
     "        else:\n",
-    "            image = image_array\n",
-    "            label = label_array\n",
+    "            image = image_array.astype(np.float32) / 255.0\n",
+    "            label = label_array.astype(np.float32) / 255.0\n",
     "\n",
     "        image_grid = ImageGrid(image[::2, ::2], diff_edge=\"diff\")\n",
     "        label_grid = ImageGrid(label[::2, ::2], diff_edge=\"diff\")\n",
@@ -364,8 +402,8 @@
     "    def train_dataloader(self):\n",
     "        train_transforms = AB.Compose([\n",
     "            AB.OneOf([\n",
-    "                AB.RandomSizedCrop(min_max_height=(320, 640), height=512, width=512, p=0.5),\n",
-    "                AB.PadIfNeeded(min_height=512, min_width=512, p=0.5)\n",
+    "                AB.RandomSizedCrop(min_max_height=(160, 240), height=256, width=256, p=0.5),\n",
+    "                AB.PadIfNeeded(min_height=256, min_width=256, p=0.5)\n",
     "            ], p=1),    \n",
     "            AB.VerticalFlip(p=0.5),              \n",
     "            AB.RandomRotate90(p=0.5),\n",
@@ -376,7 +414,8 @@
     "                ], p=0.8),\n",
     "            AB.CLAHE(p=0.8),\n",
     "            AB.RandomBrightnessContrast(p=0.8),    \n",
-    "            AB.RandomGamma(p=0.8)\n",
+    "            AB.RandomGamma(p=0.8), \n",
+    "            AB.Resize(height=256, width=256, p=1),\n",
     "        ])\n",
     "        return self._shared_dataloader(self.train_data_dicts, \n",
     "            transforms=train_transforms, \n",
@@ -538,7 +577,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = GridGNN(c_in=1, c_hidden=64, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False)\n",
+    "model = GridGNN(c_in=1, c_hidden=100, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False)\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
